# fox_orm

./: .gitignore  .pylintrc  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tst.py
.github/workflows/: build.yml  main.yml
docs/: mkdocs.yml  requirements.txt
docs/docs/: index.md
docs/docs/getting_started/: 01_installation.md  02_models.md  03_generating_tables.md  04_init_and_connect.md  05_complete_example.md  generating_tables.md  init_and_connect.md  installation.md  models.md
docs/docs/usage/: 01_basic_operations.md  02_row_types.md  basic_operations.md
docs/docs/usage/many_to_many/: definition.md  usage.md
docs/src/getting_started/: 02_models.py  03_generate_using_create_all.py  04_init_and_connect.py  05_complete.py  generate_using_metadata.py  models.py
docs/src/usage/: 02_1_annotations.py  02_2_flags.py  many_to_many.py
fox_orm/: __init__.py  column_args.py  connection.py  controller.py  exceptions.py  fields.py  model.py  query.py  relations.py  utils.py
fox_orm/column/: __init__.py  flags.py  types.py
fox_orm/internal/: __init__.py  columns.py  const.py  pydantic_compat.py  table.py  utils.py
tests/: models.py  perf.py  test_fastapi.py  test_main.py  utils.py
